--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,67 @@
 :root {
 	--base-font-color: #2b2f3d;
-	--base-body: #466874;
+	--base-body: #ccc;
+	--pulse-color: #FFFFFF;
 }
 
 body {
-	padding: 50px;
+	padding: 30px;
 	background-color: var(--base-body);
 	color: var(--base-font-color);
 	font-family: 'Roboto Mono', monospace;
 }
 
 .wrapper {
-	padding: 30px;
+	padding: 15px 15px 15px 10px;
 	background-color: #fff;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	box-shadow: 0 1px 2px rgba(0,0,0,0.3), 0 1px 2px rgba(0,0,0,0.2);
 }
 
-.about__name {
-	padding: 25px;
-	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-	box-shadow: 0 1px 2px rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.2);
+section {
+	margin: 10px;
+	padding: 0 15px 0 15px;
+	box-sizing: border-box;
 }
-.about__name:hover {
+.about {
+	max-width: 600px;
+}
+.about__job-position {
+	font-size: 20px;
+}
+.about__job-position frontend {
+	position: relative;
+}
+
+.about__job-position frontend:before {
+	content: '';
+	position: absolute;
+	left: 25px;
+	top: 10px;
+	width: 10px;
+	height: 11.7px;
+	background-color: var(--pulse-color);
+	border-radius: 100%;
+	webkit-animation: colorPulse 12s infinite alternate linear;
+	animation: colorPulse 12s infinite alternate linear;
+}
+.wrapper:hover {
 	box-shadow: 0 15px 25px rgba(0,0,0,0.35), 0 10px 10px rgba(0,0,0,0.32);
 }
+
+@keyframes colorPulse {
+	0% {--pulse-color: #08DFF2}
+	10% {--pulse-color: #16C18F}
+	20% {--pulse-color: #27C412}
+	30% {--pulse-color: #E1E908}
+	40% {--pulse-color: #E07A01}
+	50% {--pulse-color: #E03501}
+	60% {--pulse-color: #E001B9}
+	70% {--pulse-color: #015FE0}
+	80% {--pulse-color: #2E3F62}
+	90% {--pulse-color: #0A71B2}
+	100% {--pulse-color: #01E2F6}
+};
