--- a/css/style.css
+++ b/css/style.css
@@ -5,52 +5,75 @@
 }
 
 body {
-	padding: 30px;
 	background-color: var(--base-body);
 	color: var(--base-font-color);
 	font-family: 'Roboto Mono', monospace;
+	padding: 30px;
 }
-
 .wrapper {
 	padding: 15px 15px 15px 10px;
 	background-color: #fff;
 	display: flex;
-	justify-content: space-around;
+	justify-content: flex-start;
 	flex-wrap: wrap;
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 	box-shadow: 0 1px 2px rgba(0,0,0,0.3), 0 1px 2px rgba(0,0,0,0.2);
 }
+.wrapper:hover {
+	box-shadow: 0 15px 25px rgba(0,0,0,0.35), 0 10px 10px rgba(0,0,0,0.32);
+}
+
+@media (max-width: 400px) {
+	body { 
+		padding: 5px; 
+	}
+	.wrapper {
+		padding: 15px 15px 15px 0px;
+	}
+}
+
 
 section {
 	margin: 10px;
 	padding: 0 15px 0 15px;
 	box-sizing: border-box;
 }
-.about {
+section.projects {
+	width: 100%;
+}
+section.about {
 	max-width: 600px;
 }
-.about__job-position {
-	font-size: 20px;
-}
-.about__job-position frontend {
+.about__name {
 	position: relative;
+	padding-left: 40px;
+	user-select: none;
 }
 
-.about__job-position frontend:before {
+.about__name:after{
 	content: '';
 	position: absolute;
-	left: 25px;
-	top: 10px;
-	width: 10px;
-	height: 11.7px;
+	left: 0px;
+	top: 7px;
+	width: 26px;
+	height: 26px;
 	background-color: var(--pulse-color);
 	border-radius: 100%;
 	webkit-animation: colorPulse 12s infinite alternate linear;
 	animation: colorPulse 12s infinite alternate linear;
+	cursor: pointer;
+	transition: .2s;
 }
-.wrapper:hover {
-	box-shadow: 0 15px 25px rgba(0,0,0,0.35), 0 10px 10px rgba(0,0,0,0.32);
+.about__name:hover:after{
+	transform: scale(1.3);
 }
+.about__name:active:after {
+	transform: scale(0.9);
+}
+.about__job-position {
+	font-size: 20px;
+}
+
 
 @keyframes colorPulse {
 	0% {--pulse-color: #08DFF2}
