--- a/scss/slices/style.scss
+++ b/scss/slices/style.scss
@@ -26,6 +26,9 @@ a {
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.35), 0 10px 10px rgba(0, 0, 0, 0.32);
   padding-bottom: 50px;
+  @media (min-width: $screen-middle) {
+    margin: 20px;
+  }
   section {
     width: 100%;
     margin-top: 20px;
