sticky header, added Pelevin and Zimmel, restructured scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,7 @@
 @import "lib/normalize";
 @import "lib/reset";
 
+@import "slices/_mixins";
 @import "slices/style";
+@import "slices/nav";
+@import "slices/content";
