for the time being sticky off, clean script file

--- a/scss/slices/style.scss
+++ b/scss/slices/style.scss
@@ -43,7 +43,7 @@ a {
 .top-wrap {
   background-image: url("../img/arch1.jpg");
   background-size: cover;
-  position: sticky;
+  //position: sticky;
   top: 0;
   width: 100%;
 }
